# Pebble

./: .env.example  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
crates/pebble-mail/: Cargo.toml
site/: index.html  privacy.html  style.css  terms.html  wrangler.toml
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: events.rs  lib.rs  snooze_watcher.rs  state.rs
src-tauri/src/commands/: accounts.rs  advanced_search.rs  attachments.rs  batch.rs  cloud_sync.rs  compose.rs  contacts.rs  diagnostics.rs  drafts.rs  folder_counts.rs  folders.rs  gmail_labels.rs  indexing.rs  kanban.rs  labels.rs  messages.rs  mod.rs  notifications.rs  oauth.rs  pending_mail_ops.rs  rules.rs  search.rs  snooze.rs  sync_cmd.rs  threads.rs  translate.rs  trusted_senders.rs
src-tauri/src/commands/messages/: flags.rs  lifecycle.rs  mod.rs  query.rs  rendering.rs
src/app/: Layout.tsx  useNotificationOpenNavigation.ts  useRealtimePreferenceSync.ts  useRealtimeSyncTriggers.ts
src/components/: AccountSetup.tsx  AttachmentList.tsx  ComposeFAB.tsx  ConfirmDialog.tsx  ContactAutocomplete.tsx  MessageActionToolbar.tsx  MessageDetail.tsx  MessageItem.tsx  MessageList.tsx  PrivacyBanner.tsx  SearchBar.tsx  ShadowDomEmail.tsx  Sidebar.tsx  Skeleton.tsx  Spinner.tsx  StatusBar.tsx  ThreadItem.tsx  ThreadMessageBubble.tsx  TitleBar.tsx  ToastContainer.tsx
src/hooks/: useComposeDraft.ts  useComposeEditor.ts  useComposeRecipients.ts  useKeyboard.ts  (+2 more)
(+120 files in other folders)
